2008-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-deduce-fileset): Don't require the checkout-model and the
	state to be consistent since it's often an unwarranted restriction.
	Don't return the state either.
	(vc-next-action): Check that the state is consistent.
	(vc-diff-internal, vc-version-diff, vc-print-log, vc-revert)
	(vc-rollback, vc-update): Adapt to new return value of
	vc-deduce-fileset.

	* vc-dispatcher.el (vc-dispatcher-browsing): Use derived-mode-p.
	(vc-dir-prepare-status-buffer): Use vc-dispatcher-browsing.
	(vc-dispatcher-in-fileset-p): New fun.
	(vc-dispatcher-selection-set): Use it to properly handle directories.

2008-05-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-version-diff, vc-print-log, vc-revert, vc-rollback)
	(vc-update): Remove unused let bindings.

2008-05-09  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-deduce-fileset, vc-next-action, vc-version-diff)
	(vc-diff, vc-revert, vc-rollback, vc-update):
	* vc-dispatcher.el (vc-dispatcher-selection-set):
	Get rid of 4 special cases in fileset selection.  This involved
	changing the return value of (vc-deduce-fileset) so that it passes
	back a deduced state as well as a deduced back end,

2008-05-08  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-minor-mode-map)
	(compilation-mode-map):  Bind "g" to recompile and "q" to
	quit-window.
	* grep.el (grep-mode-map): Use `set-keymap-parent' to connect it
	to `compilation-minor-mode-map' (instead of an explicit `cons').

2008-05-08  Juanma Barranquero  <lekktu@gmail.com>

	* org/org.el (org-modules, org-format-latex-options):
	* org/org-archive.el (org-archive-stamp-time)
	(org-archive-save-context-info):
	* org/org-faces.el (org-hide):
	* org/org-irc.el (org-irc-parse-link):
	* org/org-macs.el (org-call-with-arg, org-autoload):
	* org/org-mew.el (org-mew-store-link):
	* org/org-remember.el (org-remember-store-without-prompt)
	(org-remember-templates): Fix typos in docstrings.
