@@ -1,3 +1,10 @@
+2008-05-09  Eric S. Raymond  <esr@snark.thyrsus.com>
+
+	* vc-scs.el (vc-sccs-checkin, vc-sccs-checkout, vc-sccs-rollback, 
+	vc-sccs-revert, vc-sccs-steal-lock, vc-sccs-modify-change-comment,
+	vc-sccs-print-log, vc-sccs-diff): Teach SCCS back end to grok 
+	directories.
+
 2008-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* vc.el (vc-deduce-fileset): Don't require the checkout-model and the
@@ -21,8 +28,8 @@
 2008-05-09  Eric S. Raymond  <esr@snark.thyrsus.com>
 
 	* vc.el (vc-deduce-fileset, vc-next-action, vc-version-diff)
-	(vc-diff, vc-revert, vc-rollback, vc-update):
-	* vc-dispatcher.el (vc-dispatcher-selection-set):
+	(vc-diff, vc-revert, vc-rollback, vc-update),
+	vc-dispatcher.el (vc-dispatcher-selection-set):
 	Get rid of 4 special cases in fileset selection.  This involved
 	changing the return value of (vc-deduce-fileset) so that it passes
 	back a deduced state as well as a deduced back end,
